syntax = "proto3";
option go_package = "tq/pb";

package pb;

import "shared.proto";

service TqJob {
  rpc Submit (SubmitRequest) returns (SubmitResponse) {}
  rpc Cancel (CancelRequest) returns (CancelResponse) {}
  rpc List (ListRequest) returns (ListResponse) {}
}

// ------------------------------------------------------------------
// Submit messages
// ------------------------------------------------------------------
message SubmitRequest {
  JobSpec job = 1;
}

message SubmitResponse {
  bool accepted = 1;
  uint32 jobNum = 2;
}

// ------------------------------------------------------------------
// Cancel messages
// ------------------------------------------------------------------
message CancelRequest {
  uint32 jobNum = 1;
}

message CancelResponse {
  bool accepted = 1;
}


// ------------------------------------------------------------------
// List request messages
// ------------------------------------------------------------------

enum JobListFilter {
  unspecified = 0;
  waiting = 1;
  running = 2;
  done = 4;
  all = 7;
}

message ListRequest {
  // todo: filtering by at least waiting|running|done, perhaps globbing or regex?
  int32 job_state_filter = 1;
  int32 job_kind_filter = 2;
}

// ------------------------------------------------------------------
// List response messages
// ------------------------------------------------------------------

message ListResponse {
  // todo: need either more info in JobStatus or may need another field(s). For example, need info about the
  // worker that jobs are running on, etc.
  repeated JobStatus jobStatus = 1;
}

